Fix footer alignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -54,9 +54,4 @@
       display: none;
     }
   }
-
-
-  .footer {
-    padding: 0 1rem;
-  }
 }
